# bluesky-queueserver-api-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  clang_format.sh  clang_validate.sh
.github/workflows/: clang_format.yml  testing.yml
code/include/: qserver.hpp  some_code.h
code/include/detail/: api.hpp  basecomm.hpp  defaults.hpp  httpcomm.hpp  utils.hpp  zmqcomm.hpp
code/src/: main.cpp  some_code.cpp
code/src/examples/: ex01_zmq_cm.cpp  ex02_http_cm.cpp  ex03_auth_api.cpp
code/tests/: test_some_code.cpp
